force-app/main/default/objects/Needs_Assessment__c/Needs_Assessment__c.object-meta.xml
<CustomObject>
    <label>Needs Assessment</label>
    <nameField>
        <displayFormat>NA-{yymmdd}-{00}</displayFormat>
        <label>NA No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Needs Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>