force-app/main/default/objects/Needs_Assessment__c/fields/Auditory_Environment__c.field-meta.xml
<CustomField>
    <fullName>Auditory_Environment__c</fullName>
    <label>Auditory Environment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Background Noise</fullName>
            </value>
            <value>
                <fullName>Outside Noise</fullName>
            </value>
            <value>
                <fullName>Construction Noise</fullName>
            </value>
            <value>
                <fullName>Traffic Noise</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>