force-app/main/default/objects/Needs_Assessment__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary 1</fullName>
            </value>
            <value>
                <fullName>Primary 2</fullName>
            </value>
            <value>
                <fullName>Primary 3</fullName>
            </value>
            <value>
                <fullName>Primary 4</fullName>
            </value>
            <value>
                <fullName>Primary 5</fullName>
            </value>
            <value>
                <fullName>Primary 6</fullName>
            </value>
            <value>
                <fullName>Secondary 1</fullName>
            </value>
            <value>
                <fullName>Secondary 2</fullName>
            </value>
            <value>
                <fullName>Secondary 3</fullName>
            </value>
            <value>
                <fullName>Secondary 4</fullName>
            </value>
            <value>
                <fullName>Secondary 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>