force-app/main/default/objects/Needs_Assessment__c/fields/Communication_isComparable__c.field-meta.xml
<CustomField>
    <fullName>Communication_isComparable__c</fullName>
    <description>Is the student’s communication comparable to the other students?</description>
    <inlineHelpText>Is the student’s communication comparable to the other students?</inlineHelpText>
    <label>Communication isComparable ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>