force-app/main/default/objects/Needs_Assessment__c/fields/Date_to_Proceed__c.field-meta.xml
<CustomField>
    <fullName>Date_to_Proceed__c</fullName>
    <inlineHelpText>Please enter the date you&apos;ve decided to proceed to Intake Assessment</inlineHelpText>
    <label>Date to Proceed</label>
    <type>Date</type>
</CustomField>