force-app/main/default/objects/Needs_Assessment__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <formula>Client_Name__r.Birthdate</formula>
    <label>DOB</label>
    <type>Date</type>
</CustomField>