force-app/main/default/objects/Needs_Assessment__c/fields/Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry</label>
    <referenceTo>Enquiry__c</referenceTo>
    <relationshipLabel>Needs Assessments (Enquiry)</relationshipLabel>
    <relationshipName>Needs_Assessments1</relationshipName>
    <type>Lookup</type>
</CustomField>