force-app/main/default/objects/Needs_Assessment__c/fields/Intake_No__c.field-meta.xml
<CustomField>
    <fullName>Intake_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake No.</label>
    <referenceTo>Intake__c</referenceTo>
    <relationshipLabel>Needs Assessments</relationshipLabel>
    <relationshipName>Needs_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>