force-app/main/default/objects/Needs_Assessment__c/fields/Interview_with_Parents__c.field-meta.xml
<CustomField>
    <fullName>Interview_with_Parents__c</fullName>
    <label>Interview with Parents</label>
    <type>TextArea</type>
</CustomField>