force-app/main/default/objects/Needs_Assessment__c/fields/Interview_with_Teacher__c.field-meta.xml
<CustomField>
    <fullName>Interview_with_Teacher__c</fullName>
    <label>Interview with Teacher</label>
    <type>TextArea</type>
</CustomField>