force-app/main/default/objects/Needs_Assessment__c/fields/Interviewee_Name__c.field-meta.xml
<CustomField>
    <fullName>Interviewee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewee Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Needs Assessments (Interviewee Name)</relationshipLabel>
    <relationshipName>Needs_Assessments2</relationshipName>
    <type>Lookup</type>
</CustomField>