force-app/main/default/objects/Needs_Assessment__c/fields/ISS_Team__c.field-meta.xml
<CustomField>
    <fullName>ISS_Team__c</fullName>
    <label>ISS Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Learning Support Educator</fullName>
            </value>
            <value>
                <fullName>Social Worker / Case Manager</fullName>
            </value>
            <value>
                <fullName>Speech Therapist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>