force-app/main/default/objects/Needs_Assessment__c/fields/Language_Demands_Verbal_Demands__c.field-meta.xml
<CustomField>
    <fullName>Language_Demands_Verbal_Demands__c</fullName>
    <label>Verbal Demands</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>