force-app/main/default/objects/Needs_Assessment__c/fields/Observation_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Observation_Remarks__c</fullName>
    <label>Observation Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>