force-app/main/default/objects/Needs_Assessment__c/fields/Physical_Environmnent__c.field-meta.xml
<CustomField>
    <fullName>Physical_Environmnent__c</fullName>
    <description>Where is student seated? What is the student’s proximity to teacher?</description>
    <inlineHelpText>Where is student seated? What is the student’s proximity to teacher?</inlineHelpText>
    <label>Physical Environmnent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On the Floor</fullName>
            </value>
            <value>
                <fullName>Front of Room</fullName>
            </value>
            <value>
                <fullName>At Learning Center</fullName>
            </value>
            <value>
                <fullName>Middle of Room</fullName>
            </value>
            <value>
                <fullName>On the Chair in Group</fullName>
            </value>
            <value>
                <fullName>Back of Room</fullName>
            </value>
            <value>
                <fullName>At Desk</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>