force-app/main/default/objects/Needs_Assessment__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <label>Recommendation</label>
    <type>TextArea</type>
</CustomField>