force-app/main/default/objects/Needs_Assessment__c/fields/Responsiveness_Stra__c.field-meta.xml
<CustomField>
    <fullName>Responsiveness_Stra__c</fullName>
    <description>Responsiveness to Instructional Strategies:</description>
    <inlineHelpText>Responsiveness to Instructional Strategies:</inlineHelpText>
    <label>Responsiveness Strategies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wait Time</fullName>
            </value>
            <value>
                <fullName>Visual Supports</fullName>
            </value>
            <value>
                <fullName>Repetition</fullName>
            </value>
            <value>
                <fullName>Graphic Organization</fullName>
            </value>
            <value>
                <fullName>Rephrasing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>