force-app/main/default/objects/Needs_Assessment__c/fields/School_Personnel__c.field-meta.xml
<CustomField>
    <fullName>School_Personnel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>School personnel involved</inlineHelpText>
    <label>School Personnel</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Needs Assessments (School Personnel)</relationshipLabel>
    <relationshipName>Needs_Assessments1</relationshipName>
    <type>Lookup</type>
</CustomField>